#5 Fix PR suggestions.